Fix some false whitespace on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -42,8 +42,6 @@ img.card-img-top {
 }
 
 .cards .card {
-    min-width: 400px;
-    max-width: 400px;
     min-height: 275px;
 }
 
